# lucent-v1

./: .cz.toml  .gitignore  CHANGELOG.md  Dockerfile.postgres  Makefile  README.md  docker-compose.yml
.github/workflows/: version.yml
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/contexts/: AlertContext.tsx  MineDetailsContext.tsx  SidebarContext.tsx  ThemeContext.tsx
client/src/layouts/: DashboardLayout.tsx
client/src/pages/: 404.tsx  Auth.tsx  Board.tsx  Dashboard.tsx  FeatureStore.tsx  Library.tsx  MakeComparisons.tsx  Maps.tsx  Models.tsx  SQLEditor.tsx  (+2 more)
seed/: generate_local_db.py  main.py  manifest.yaml  pyproject.toml
seed/src/: extract.py  ingestion.py  transform.py
seed/src/config/: column_mappings.json  value_overrides.json
seed/src/data/: a2-design-process.txt  mine_sites.csv  mine_sites.json  mine_sites.xlsx
seed/src/scripts/: embeddings.py  places_api.py
seed/src/sql/: post-seed.sql  pre-seed.sql
seed/src/utils/: __init__.py  api.py  database.py  files.py  helpers.py  logging.py  s3.py  scripts.py  sql.py
server/: Dockerfile  bot.py  main.py  models.py  pyproject.toml
server/src/ai/: agent.py  toolkit.py
server/src/config/: get_loser_data.sql  get_winner_data.sql  sample_compairson_data.sql
server/src/ml/: BaseModel.py  __init__.py  helpers.py
server/src/ml/models/: deap.py  pytorch.py  sklearn.py
server/src/routes/: assistant.py  data.py  model.py
server/src/utils/: __init__.py  database.py  logging.py  openai.py
(+21 files in other folders)
